Added get APIs to get customer details
